--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@mui/material": "^6.1.1",
     "@mui/x-data-grid": "^7.17.0",
     "@toolpad/core": "^0.7.0",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/leaflet": "^1.9.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
