--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.1",
     "@mui/x-data-grid": "^7.17.0",
     "@toolpad/core": "^0.7.0",
+    "axios": "^1.8.4",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
